# fast_spheres

./: .gitignore  LICENSE  Makefile  PERF_NOTES.md  README.md
.github/workflows/: ci.yml  release.yml
archive/python/src/: benchmark.py  cli.py  constants.py  fast_spheres.py  shading.py
experiments/: diff_shading.py
rust/: Cargo.toml
rust/fast_spheres_app/: Cargo.toml
rust/fast_spheres_app/src/: main.rs
rust/fast_spheres_core/: Cargo.toml
rust/fast_spheres_core/src/: lib.rs  scene.rs
rust/scenes/: demo_dense.json  demo_dense_parallel.json  demo_scene.json  demo_scene_alt.json
src/: constants.py  fast_spheres.py  shading.py
tests/: test_rendering.py  test_rust_parity.py
