[package]
name = "fast_spheres_app"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_spheres_core = { path = "../fast_spheres_core", features = ["parallel"] }
font8x8 = "0.3"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
minifb = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
